--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
 
               <a href="http://undervaluedblog.com/disclaimer/" >
                 
-                Disclaimeer
+                Disclaimer
               </a>
             </li>
             
