Add amazon affiliate links.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,11 @@ I started this blog in order to write about programming, data analysis, finance2
       </div>
       
     
-
+	<div class="section">
+      <div class="content" style="height: 100px; width:200px">
+			<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=1bb546e8-5040-411b-838e-540735baea5e"></script>
+      </div>
+    </div>
 </div>
 
         </div>
