Update disclaimer with affiliates statement.

--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -51,7 +51,7 @@
     },
     "datePublished": "2017-01-30",
     "description": "",
-    "wordCount":  55 
+    "wordCount":  87 
   }
 </script>
 
@@ -153,6 +153,8 @@
 
       <div class="content">
   <p>I am not a financial expert or licensed in any way to give financial advice. The opinions expressed here are solely my own and should not be taken as financial advice. Consult a professional (ideally one with fiduciary duty to you) before making financial decisisions.</p>
+
+<p>We are a participant in the Amazon Services LLC Associates Program, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com and affiliated sites.</p>
 
 <p>Please send any corrections or errors to undervaluedblog [at] gmail.com.</p>
 
