Add Bing analytics. Fix typo.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <p>
   
   
-    From Share Parrish1
+    From Shane Parrish1
  Reading is not only the key to improving your lot in life, but it’s necessary if you want to develop insights, ideas, and understanding that sets you apart from others. You can’t however, read what everyone else is reading.
  My only minor quibble here is that it should be stated: you can&rsquo;t only read what everyone else is reading.
 I am an engineer. I don&rsquo;t get art.
