--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
 </small>
 
     
+  <i class="fa fa-tags"></i>
+  
+  <a href="http://undervaluedblog.com/tags/finance" class="label label-primary">finance</a>
+  
+
 
   </div>
 </div>
@@ -144,7 +149,7 @@
     <p>
   
   
-    Since the election, a few people have made comments along the lines of &ldquo;Trump will be good for stocks&rdquo;. The implication is that Republican presidents are better for the stock market since they are generally viewed as being pro-business. It amazes me that this assumption is pervasive given stock market performance for the last three presidents. However, since I recently read The Undoing Project, I was cognizant of any biases I may have and decided to look at all the data.
+    Since the election, a few people have made comments along the lines of &ldquo;Trump will be good for stocks&rdquo;. The implication is that Republican presidents are better for the stock market since they are generally viewed as being pro-business. It amazes me that this assumption is pervasive given stock market performance for the last three presidents. However, since I recently read The Undoing Project, I was cognizant of any biases I may have and decided to look at the avialable data.
   
 
 
@@ -358,7 +363,7 @@ I started this blog in order to write about programming, data analysis, finance2
 
         <div class="content">
           <ul>
-            <li><a href="/tags/books">books</a></li><li><a href="/tags/podcasts">podcasts</a></li>
+            <li><a href="/tags/books">books</a></li><li><a href="/tags/finance">finance</a></li><li><a href="/tags/podcasts">podcasts</a></li>
           </ul>
         </div>
       </div>
