--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <p>
   
   
-    Since the election, a few people have made comments along the lines of &ldquo;Trump will be good for stocks&rdquo;. The implication is that Republican presidents are better for the stock market since they are generally viewed as being pro-business. It amazes me that this assumption is pervasive given stock market performance for the last three presidents. However, since I recently read The Undoing Project, I was cognizant of any biases I may have and decided to look at the avialable data.
+    Since the election, a few people have made comments to me implying Trump will be good for stocks1. The implication is that Republican presidents are better for the stock market since they are generally viewed as being pro-business. It amazes me that this assumption is pervasive given stock market performance for the last three presidents (Clinton, Bush, Obama). However, since I recently read The Undoing Project, I was cognizant of any biases I may have and decided to look at the available data.
   
 
 
