Fix image and add tags.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
 </small>
 
     
+  <i class="fa fa-tags"></i>
+  
+  <a href="http://undervaluedblog.com/tags/finance" class="label label-primary">finance</a>
+  
+
 
   </div>
 </div>
@@ -172,6 +177,13 @@
 </small>
 
     
+  <i class="fa fa-tags"></i>
+  
+  <a href="http://undervaluedblog.com/tags/finance" class="label label-primary">finance</a>
+  
+  <a href="http://undervaluedblog.com/tags/uncertainty-quantification" class="label label-primary">uncertainty quantification</a>
+  
+
 
   </div>
 </div>
@@ -441,7 +453,7 @@ I started this blog in order to write about programming, data analysis, finance2
 
         <div class="content">
           <ul>
-            <li><a href="/tags/books">books</a></li><li><a href="/tags/finance">finance</a></li><li><a href="/tags/podcasts">podcasts</a></li>
+            <li><a href="/tags/finance">finance</a></li><li><a href="/tags/books">books</a></li><li><a href="/tags/podcasts">podcasts</a></li><li><a href="/tags/uncertainty-quantification">uncertainty-quantification</a></li>
           </ul>
         </div>
       </div>
